Fix crash when rendering viewport within another area

This also Fix T55574 Crash on sequencer preview